# llvm-backend

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.arch  INSTALL.md  Jenkinsfile  README.md  ciscript  default.nix  envrc.sh  flake.nix  includes.imp  install-rust  llvm6.sh  rust-checksum  rustalloc.alias  rustalloc.lds  setenv  setup.py  shell.nix  test.nix  test.nix.sh  w
bindings/c/: CMakeLists.txt  lib.cpp
bindings/python/: CMakeLists.txt  ast.cpp  example.cpp  kllvm.cpp  kore.cpp  runtime.cpp  runtime.h
bindings/python/kllvm/: pyproject.toml
bindings/python/package/: pyproject.toml
debug/: CMakeLists.txt  k-lldb  k_lldb_path  kgdb.py  klldb.py
include/: CMakeLists.txt
include/kllvm/: Alloc.h
include/kllvm/ast/: AST.h  attribute_set.h  deserializer.h  pattern_matching.h  serializer.h  util.h
include/kllvm/binary/: ProofTraceParser.h  ProofTraceUtils.h  ProofTraceValidator.h  deserializer.h  ringbuffer.h  serializer.h  version.h
include/kllvm/codegen/: ApplyPasses.h  CreateStaticTerm.h  CreateTerm.h  Debug.h  Decision.h  DecisionParser.h  EmitConfigParser.h  GCStrategy.h  GenAlloc.h  Metadata.h  MustTailDeadArgElimination.h  Options.h  ProofEvent.h  RemoveDeadKFunctions.h  SetVisibilityHidden.h  Util.h
include/kllvm/hello/: hello.h
include/kllvm/parser/: KOREParser.h  KOREParserDriver.h  KOREScanner.h  location.h
include/kllvm/printer/: printer.h
include/kllvm/util/: FileRAII.h  temporary_file.h  transitive_closure.h
include/runtime/: alloc.h  alloc_cpp.h  arena.h  collect.h  fmt_error_handling.h  format.h  header.h  header.hpp  opaque_cpp.h  proof_trace_writer.h  timer.h  types.h
include/runtime/collections/: RBTree.h  (+1 more)
lib/ast/: AST.cpp  CMakeLists.txt  aliasing.cpp  attribute_set.cpp  definition.cpp  deserializer.cpp  pattern_matching.cpp  serializer.cpp  util.cpp
lib/codegen/: ApplyPasses.cpp  CMakeLists.txt  CopyOnWrite.cpp  CreateStaticTerm.cpp  CreateTerm.cpp  Debug.cpp  Decision.cpp  DecisionParser.cpp  EmitConfigParser.cpp  GenAlloc.cpp  Metadata.cpp  Options.cpp  ProofEvent.cpp  Util.cpp
lib/llvm/: CMakeLists.txt  EmitGCLayoutInfo.cpp  KoreGC.cpp  MarkTailCallsAsGCLeaf.cpp  NoOmitFramePointerForTailcc.cpp
lib/parser/: CMakeLists.txt  KOREParser.cpp  KOREParser.y  KOREParserDriver.cpp  KOREScanner.l
lib/passes/: CMakeLists.txt  GCStrategy.cpp  MustTailDeadArgElimination.cpp  PluginInfo.cpp  RemoveDeadKFunctions.cpp  SetVisibilityHidden.cpp
lib/set-visibility-hidden/: CMakeLists.txt  SetVisibilityHidden.cpp
runtime/: CMakeLists.txt  alloc.c  equality.ll  finish_rewriting.ll  fresh.ll  getTag.ll  hash.ll  header.ll  main.ll  move_float.ll  move_int.ll  opaque.ll  ordering.cpp  rustalloc.ll  string_equal.ll  take_steps.ll
runtime/alloc/: CMakeLists.txt  alloc.c  alloc.cpp  arena.c  arena.cpp  collect.c  migrate_roots.cpp  register_gc_roots_enum.cpp
runtime/arithmetic/: CMakeLists.txt  float.cpp  int.c  int.cpp
runtime/collect/: CMakeLists.txt  StackMapParser.cpp  collect.cpp  migrate_collection.cpp  migrate_roots.cpp  migrate_static_roots.cpp
runtime/collections/: CMakeLists.txt  RBTree.h  hash.cpp  kelemle.cpp  lists.cpp  maps.cpp  rangemap.h  rangemaps.cpp  sets.cpp
runtime/configurationparser/: CMakeLists.txt  ConfigurationParser.cpp  ConfigurationPrinter.cpp  header.h
runtime/datastructures/: Cargo.toml
runtime/ffi/: CMakeLists.txt  ffi.cpp
runtime/io/: CMakeLists.txt  io.cpp  logTerm.cpp  parseKORE.cpp
runtime/json/: CMakeLists.txt  json.cpp
runtime/lto/: CMakeLists.txt  alloc.cpp
runtime/main/: main.ll  search.cpp
runtime/meta/: CMakeLists.txt  ffi.cpp  kreflection.cpp  substitution.cpp
runtime/opaque/: CMakeLists.txt  opaque.ll
runtime/ordering/: CMakeLists.txt  ordering.cpp
runtime/strings/: CMakeLists.txt  alloc.c  alloc.h  bytes.cpp  copy_on_write.cpp  numeric.cpp  strings.cpp
runtime/timer/: CMakeLists.txt  timer.cpp
runtime/util/: CMakeLists.txt  ConfigurationParser.cpp  ConfigurationPrinter.cpp  ConfigurationSerializer.cpp  ConfigurationToAST.cpp  clock.cpp  finish_rewriting.cpp  match_log.cpp  search.cpp  util.cpp
tools/: CMakeLists.txt
tools/hello/: CMakeLists.txt  main.cpp
tools/k-rule-apply/: CMakeLists.txt  auxiliar.h  main.cpp  shims.cpp  shims.h
tools/k-rule-find/: CMakeLists.txt  main.cpp
tools/kore-arity/: CMakeLists.txt  main.cpp
tools/kore-convert/: CMakeLists.txt  main.cpp
tools/kore-embed/: CMakeLists.txt  main.cpp
tools/kore-expand-macros/: CMakeLists.txt  main.cpp
tools/kore-header/: CMakeLists.txt  main.cpp
tools/kore-proof-trace/: CMakeLists.txt  main.cpp
tools/kore-proof-trace-shm-writer/: CMakeLists.txt  main.cpp
tools/kore-proof-trace-test/: CMakeLists.txt  main.cpp
tools/kore-rich-header/: CMakeLists.txt  main.cpp
tools/kore-split/: CMakeLists.txt  main.cpp
tools/kore-strip/: CMakeLists.txt  main.cpp
tools/kprint/: CMakeLists.txt  addBrackets.cpp  main.cpp
tools/llvm-backend-version/: CMakeLists.txt  version.cpp  version.inc.in
tools/llvm-kompile-codegen/: CMakeLists.txt  main.cpp
tools/llvm-kompile-compute-loc/: CMakeLists.txt  main.cpp
tools/llvm-kompile-compute-ordinal/: CMakeLists.txt  main.cpp
tools/llvm-kompile-gc-stats/: CMakeLists.txt  main.cpp
tools/parser/: CMakeLists.txt  main.cpp
tools/test_configparser/: CMakeLists.txt  main.cpp
tools/test_rhs/: CMakeLists.txt  main.cpp
tools/test_sideconditions/: CMakeLists.txt  main.cpp
unittests/: CMakeLists.txt
unittests/ast/: CMakeLists.txt  asttest.cpp  main.cpp
unittests/compiler/: CMakeLists.txt  asttest.cpp  decisiontest.cpp  main.cpp  pattern_matching.cpp  ringbuffer.cpp  subsortmap.cpp
unittests/runtime-arithmetic/: CMakeLists.txt  floattest.cpp  inttest.cpp
unittests/runtime-collections/: CMakeLists.txt  lists.cpp  maps.cpp  rangemap-hooks.cpp  rangemaps.cpp  sets.cpp  treemaps.cpp
unittests/runtime-ffi/: CMakeLists.txt  ffi.cpp  foreign.cpp
unittests/runtime-io/: CMakeLists.txt  io.cpp  iotest.cpp  main.cpp
unittests/runtime-strings/: CMakeLists.txt  bytestest.cpp  main.cpp  stringtest.cpp
(+1497 files in other folders)
