set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")

add_subdirectory(arithmetic)
add_subdirectory(configurationparser)
add_subdirectory(strings)
add_subdirectory(meta)
add_subdirectory(alloc)
add_subdirectory(collect)
add_subdirectory(io)
add_subdirectory(collections)
