[package]
name = "datastructures"
version = "0.1.0"
authors = ["Dwight Guth <dwight.guth@runtimeverification.com>"]

[dependencies]
im = { git = "https://github.com/bodil/im-rs", rev = "9dada473f4323adcb1887ab674533916e3f3ff12" }
libc = "0.2.42"

[lib]
name = "datastructures"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
codegen-units=1
panic = "abort"
