[package]
name = "datastructures"
version = "0.1.0"
authors = ["Dwight Guth <dwight.guth@runtimeverification.com>"]

[dependencies]
im-rc = "12.3.2"
libc = "0.2.42"

[lib]
name = "datastructures"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
codegen-units=1
panic = "abort"
debug = true
