[tool.poetry]
name = "kllvm"
version = "0.1.0"
description = "Python bindings for the K LLVM backend"
authors = [
    "Runtime Verification, Inc. <contact@runtimeverification.com>",
]
readme = "README.md"
include = ["kllvm/*"]

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
